--- a/css/slyles.css
+++ b/css/slyles.css
@@ -49,6 +49,17 @@ img {
   background-color: aquamarine; */
 }
 
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
 /* ==========COMPONENTS========== */
 
 /* ==========COMPONENTS END========== */
@@ -253,7 +264,9 @@ img {
   text-transform: uppercase;
 }
 
-.hero-button {
+.hero-button,
+.footer-form-btn,
+.modal-form-btn {
   background-color: var(--accent-color);
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -265,7 +278,9 @@ img {
   margin-top: 30px;
 }
 
-.hero-button-name {
+.hero-button-name,
+.footer-form-btn-name,
+.modal-form-btn {
   color: var(--white-color);
 
   font-family: Roboto;
@@ -622,7 +637,8 @@ img {
   margin-left: 70px;
 }
 
-.footer-social-title {
+.footer-social-title,
+.footer-form-title {
   padding-bottom: 20px;
 
   font-weight: 700;
@@ -640,6 +656,44 @@ img {
 }
 .footer-icon-color {
   fill: var(--white-color);
+}
+
+.footer-form {
+  margin-left: 83px;
+}
+.footer-form-btn {
+  margin: 0;
+  position: relative;
+  padding-right: 62px;
+  padding-left: 29px;
+}
+
+.footer-form-btn-name {
+}
+
+.footer-form-svg {
+  position: absolute;
+  top: 13px;
+  right: 28px;
+}
+
+.footer-form-input {
+  width: 358px;
+  height: 50px;
+  background-color: var(--dark-background);
+  color: var(--white-color);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  padding-left: 16px;
+  margin-right: 10px;
+}
+
+.footer-form-input:focus {
+  outline: none;
 }
 
 /* ==========FOOTER END========== */
@@ -793,6 +847,8 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  padding: 40px;
 }
 
 .modal-close-btn {
@@ -804,11 +860,154 @@ img {
   border-radius: 50%;
   background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  outline: none;
 }
 
-.is-hidden {
+.modal-icon-close {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon-close:hover {
+  fill: var(--accent-color);
+}
+
+/* .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-}
+} */
+
 /* ==========BACKDROP END========== */
+
+/* ==========MODAL FORM========== */
+
+.modal-title-text {
+  font-weight: 900;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--title-text-color);
+  margin-bottom: 12px;
+}
+
+.modal-form-field {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.66;
+  letter-spacing: 0.01em;
+
+  color: var(--primary-text-color);
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+}
+
+.modal-form-icon {
+  position: absolute;
+  left: 15px;
+  top: 40%;
+  transform: translateY(-50%);
+
+  width: 18px;
+  height: 18px;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  padding-left: 42px;
+  margin-bottom: 10px;
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border: 1px solid var(--accent-color);
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
+}
+
+.modal-form-comment {
+  width: 100%;
+  height: 120px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+
+  border-radius: 4px;
+  resize: none;
+
+  padding: 12px 16px;
+  margin-bottom: 20px;
+}
+
+.modal-form-comment:focus {
+  outline: none;
+  border: 1px solid var(--accent-color);
+}
+
+.modal-form-comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.contact-form-policy-label {
+  display: flex;
+  align-items: center;
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+
+  color: var(--primary-text-color);
+  margin-bottom: 30px;
+}
+
+.contact-form-policy-label::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+
+  border: 2px solid #000;
+  border-radius: 2px;
+}
+
+.modal-form-policy:checked + .contact-form-policy-label::before {
+  background-color: var(--accent-color);
+}
+
+.modal-icon-check {
+  position: absolute;
+  margin-left: 2px;
+}
+
+.modal-form-btn {
+  margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-btn:hover {
+  background-color: #188ce8;
+}
+
+/* ==========MODAL FORM END========== */
