--- a/css/slyles.css
+++ b/css/slyles.css
@@ -276,6 +276,7 @@ img {
   width: 200px;
   height: 50px;
   margin-top: 30px;
+  outline: none;
 }
 
 .hero-button-name,
@@ -834,7 +835,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  transition: all 250ms linear;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
